[package]
name = "magma_ecs"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT"
description = "Entity-Component-System for the Magma3D game engine"
homepage = "https://dynamicgoose.github.io/magma3d-engine/"
repository = "https://github.com/DynamicGoose/magma-ecs"

[dependencies]
rayon = "1.10.0"
roaring = "0.10.6"
